--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
 	"name": "ParadoxExport",
-	"description": "TBD",
-	"version": "1.0",
+	"description": "Importing dndbeyond content into foundry vtt",
+	"version": "1.2.4",
 	"homepage_url": "https://paradoxsolutions.gerhard-wagner.dev",
 
 	"content_scripts": [
@@ -12,7 +12,7 @@
 		},
 		{
 			"matches": ["https://www.dndbeyond.com/monsters/*"],
-			"js": ["monster.js"]
+			"js": ["monster.js", "./utils/translation.js"]
 		},
 		{
 			"matches": ["https://*/game"],
