--- a/manifest.json
+++ b/manifest.json
@@ -2,30 +2,30 @@
 	"manifest_version": 2,
 	"name": "ParadoxExport",
 	"description": "Importing dndbeyond content into foundry vtt",
-	"version": "1.2.4",
+	"version": "1.3.0",
 	"homepage_url": "https://paradoxsolutions.gerhard-wagner.dev",
 
 	"content_scripts": [
 		{
 			"matches": ["https://www.dndbeyond.com/spells/*"],
-			"js": ["spell.js", "./utils/translation.js"]
+			"js": ["browser-polyfill.js", "spell.js", "./utils/translation.js"]
 		},
 		{
 			"matches": ["https://www.dndbeyond.com/equipment/*"],
-			"js": ["equipment.js"]
+			"js": ["browser-polyfill.js", "equipment.js"]
 		},
 		{
 			"matches": ["https://www.dndbeyond.com/monsters/*"],
-			"js": ["monster.js", "./utils/translation.js"]
+			"js": ["browser-polyfill.js", "monster.js", "./utils/translation.js"]
 		},
 		{
 			"matches": ["https://*/game"],
-			"js": ["foundry.js"]
+			"js": ["browser-polyfill.js", "foundry.js"]
 		}
 	],
 
 	"background": {
-		"scripts": ["background.js"]
+		"scripts": ["browser-polyfill.js", "background.js"]
 	},
 
 	"permissions": [
