--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name": "ParadoxExport",
 	"description": "Importing dndbeyond content into foundry vtt",
-	"version": "1.3.0",
+	"version": "1.3.1",
 	"homepage_url": "https://paradoxsolutions.gerhard-wagner.dev",
 
 	"content_scripts": [
@@ -17,6 +17,10 @@
 		{
 			"matches": ["https://www.dndbeyond.com/monsters/*"],
 			"js": ["browser-polyfill.js", "monster.js", "./utils/translation.js"]
+		},
+		{
+			"matches": ["https://www.dndbeyond.com/profile/*/characters/*"],
+			"js": ["browser-polyfill.js", "character.js", "./utils/translation.js"]
 		},
 		{
 			"matches": ["https://*/game"],
